--- a/app/views/pins/_comments.html.erb
+++ b/app/views/pins/_comments.html.erb
@@ -4,13 +4,27 @@
   <% end %>
 
   <% if logged_in? %>
-    <!-- Add new top-level comment -->
+
     <%= form_with(model: [pin, Comment.new], local: true, class: "mt-4 space-y-2") do |f| %>
-      <div>
-        <%= f.text_area :content, placeholder: "Add a comment...", rows: 2, class: "w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+      <div class="relative w-full" data-controller="mentions">
+
+        <%= f.text_area :content,
+            placeholder: "Add a comment...",
+            rows: 2,
+            class: "w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500",
+            data: {
+              action: "input->mentions#search",
+              mentions_target: "input"
+            } %>
+
+        <div data-mentions-target="dropdown"
+             class="absolute left-0 top-full mt-1 w-full bg-white border rounded shadow-lg hidden z-50"></div>
+
       </div>
+
       <%= f.hidden_field :parent_id, value: nil %>
       <%= f.submit "Comment", class: "px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition" %>
     <% end %>
+
   <% end %>
 </div>
